--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,12 @@
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/vite": "^4.1.5",
+    "amadeus": "^11.0.0",
     "framer-motion": "^12.9.4",
     "react": "^19.0.0",
+    "react-date-fns": "^1.2.1",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
     "three": "^0.176.0"
