--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,28 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start:api": "node index.js",
+    "start:auth": "node mongodb.js",
+    "dev": "concurrently \"npm run start:api\" \"npm run start:auth\""
   },
   "dependencies": {
+    "amadeus": "^11.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "mongo": "^0.1.0",
+    "mongodb": "^6.16.0",
+    "nodemailer": "^7.0.3",
+    "nodemon": "^3.1.10",
+    "twilio": "^5.6.1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "concurrently": "^9.1.2"
+  }
 }
