--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/vite": "^4.1.5",
     "amadeus": "^11.0.0",
+    "axios": "^1.9.0",
     "framer-motion": "^12.9.4",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.5",
     "react": "^19.0.0",
     "react-date-fns": "^1.2.1",
     "react-date-range": "^2.0.1",
